--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Index.cshtml
@@ -28,8 +28,8 @@
                     <table class="table table-bordered table-striped mb-0" id="datatable-default">
                         <thead>
                             <tr>
+                                <th class="text-center">Cod-Sigla</th>
                                 <th class="text-center">Unidade de atendimento</th>
-                                <th class="text-center">Sigla</th>
                                 <th class="text-center">Endereço</th>
                                 <th class="text-center">Início vigência</th>
                                 <th class="text-center">Fim vigência</th>
@@ -39,17 +39,17 @@
                         <tbody>
                             @foreach (var item in Model.aaData)
                             {
-                                <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.CodUnidade)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Sigla)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Endereco)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DtIniVigencia)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DtFimVigencia)</td>
-                                    <td class="actions">
-                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="UnidadeInfraEstrutura" asp-route-id="@item.CodUnidadeInfraestrutura" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td>@Html.DisplayFor(modelItem => item.CodUnidade) - @Html.DisplayFor(modelItem => item.Sigla)</td>
+                                <td>@Html.DisplayFor(modelItem => item.NomUnidadeÌnfraestrutura)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Endereco)</td>
+                                <td>@Html.DisplayFor(modelItem => item.DtIniVigencia)</td>
+                                <td>@Html.DisplayFor(modelItem => item.DtFimVigencia)</td>
+                                <td class="actions">
+                                    <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="UnidadeInfraestrutura" asp-route-id="@item.CodUnidadeInfraestrutura" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
+                                    <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="UnidadeInfraestrutura" asp-route-id="@item.CodUnidadeInfraestrutura" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                </td>
+                            </tr>
                             }
                         </tbody>
                     </table>
@@ -89,13 +89,6 @@
 @section Scripts {
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/dataTables.buttons.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.html5.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.print.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/JSZip-2.5.0//jszip.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js"></script>
     <script src="~/js/empresa.js"></script>
 
     <script>
