--- a/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
@@ -19,29 +19,37 @@
                     <h2 class="card-title">Cadastrar Empresas para Atendimento de Relato</h2>
 
                 </header>
-                <div class="card-body">
+                <div id="vEmpresa" class="card-body" data-loading-overlay>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público</label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público<span class="required">*</span></label>
                         <div class="col-sm-9">
                             <input type="text" name="Empresa" class="form-control" placeholder="eg.: Empresa órgão público"
                                    title="Por favor informe a empresa órgão público" required />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="CNPJ" class="form-control" data-input-mask="99.999.999/9999-99" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18"
+                            <input type="text" name="CNPJ" class="form-control" data-input-mask="99.999.999/9999-99"
+                                   v-model="params.cnpj"
+                                   v-on:blur="ExisteCnpj"
+                                   placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18"
                                    title="Por favor informe o CNPJ da empresa / órgão público" required />
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Telefone </label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Telefone <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input name="Telefone" id="phone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" placeholder="eg.: Telefone da empresa" class="form-control"
+                                <input name="Telefone" id="Telefone" data-plugin-masked-input="" 
+                                       style="z-index: auto;"
+                                       data-input-mask="(99) 999-9999" 
+                                       placeholder="eg.: Telefone da empresa" 
+                                       Title="Por favor informe o telefone da empresa" 
+                                       class="form-control"
                                        title="Por favor informe o telefone da empresa" required>
                             </div>
                         </div>
@@ -65,31 +73,7 @@
 }
 @section Scripts {
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
-    <script>
-        (function ($) {
-
-            'use strict';
-
-            $("#form").validate({
-                highlight: function (label) {
-                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
-                },
-                success: function (label) {
-                    $(label).closest('.form-group').removeClass('has-error');
-                    label.remove();
-                },
-                errorPlacement: function (error, element) {
-                    var placement = element.closest('.input-group');
-                    if (!placement.get(0)) {
-                        placement = element;
-                    }
-                    if (error.text() !== '') {
-                        placement.after(error);
-                    }
-                }
-            });
-
-        }).apply(this, [jQuery]);
-    </script>
+    <script src="~/js/empresa.js"></script>
+    
 }
 
