--- a/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
@@ -22,13 +22,18 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Empresa órgão público</label>
                         <div class="col-sm-9">
-                            <input type="text" name="empresa" class="form-control" value="@Model.NomRazaoSocial" placeholder="eg.: Nome da empresa órgão público para atendimento de relatos" />
+                            <input type="text" name="empresa" class="form-control" 
+                                   value="@Model.NomRazaoSocial" placeholder="eg.: Nome da empresa órgão público para atendimento de relatos" readonly/>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ </label>
                         <div class="col-sm-9">
-                            <input type="text" name="cnpj" class="form-control" data-input-mask="99.999.999/9999-99" value="@Model.NumCnpj" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18" />
+                            <input type="text" name="cnpj" class="form-control" 
+                                   data-input-mask="99.999.999/9999-99" 
+                                   value="@Model.NumCnpj" placeholder="eg.: CNPJ da empresa / órgão público" 
+                                   maxlength="18" 
+                                   readonly/>
                         </div>
                     </div>
                     <div class="form-group row">
